--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "crapthings",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.3.3",
     "express": "^4.13.3",
     "sequelize": "^3.6.0"
   }
